Initial change image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>Hello World from my website!</p>
-        <img src="cat.img" alt="Cat">
+        <img src="cat.jpg" alt="Cat">
     </body>
 </html>
